@@ -103,7 +103,6 @@ val corec_codeN = "corec_code";
 val map_disc_iffN = "map_disc_iff";
 val map_selN = "map_sel";
 val set_casesN = "set_cases";
-val set_emptyN = "set_empty";
 val set_introsN = "set_intros";
 val set_inductN = "set_induct";
 val set_selN = "set_sel";
@@ -1429,42 +1428,6 @@ fun define_co_datatypes prepare_constraint prepare_typ prepare_term fp construct
                 |> map (unfold_thms lthy @{thms insert_is_Un[THEN sym] Un_empty_left
                   Un_insert_left});
 
-              val sets = map (mk_set (snd (Term.dest_Type fpT))) (sets_of_bnf fp_bnf);
-
-              val set_empty_thms =
-                let
-                  val ctr_argT_namess = map ((fn Ts => fold Term.add_tfree_namesT Ts []) o
-                    binder_types o fastype_of) ctrs;
-                  val setTs = map (HOLogic.dest_setT o range_type o fastype_of) sets;
-                  val setT_names = map (fn T => the_single (Term.add_tfree_namesT T [])) setTs;
-
-                  fun mk_set_empty_goal disc set T =
-                    Logic.mk_implies (HOLogic.mk_Trueprop (disc $ u),
-                      mk_Trueprop_eq (set $ u, HOLogic.mk_set T []));
-
-                  val goals =
-                    if null discs then
-                      []
-                    else
-                      map_filter I (flat
-                        (map2 (fn names => fn disc =>
-                          map3 (fn name => fn setT => fn set =>
-                            if member (op =) names name then NONE
-                            else SOME (mk_set_empty_goal disc set setT))
-                          setT_names setTs sets)
-                        ctr_argT_namess discs));
-                in
-                  if null goals then
-                    []
-                  else
-                    Goal.prove_sorry lthy [] [] (Logic.mk_conjunction_balanced goals)
-                      (fn {context = ctxt, prems = _} =>
-                        mk_set_empty_tac ctxt (certify ctxt u) exhaust set0_thms (flat disc_thmss))
-                    |> Conjunction.elim_balanced (length goals)
-                    |> Proof_Context.export names_lthy lthy
-                    |> map Thm.close_derivation
-                end;
-
               val rel_infos = (ctr_defs' ~~ cxIns, ctr_defs' ~~ cyIns);
 
               fun mk_rel_thm postproc ctr_defs' cxIn cyIn =
@@ -1538,7 +1501,7 @@ fun define_co_datatypes prepare_constraint prepare_typ prepare_term fp construct
                       val goals = mk_parametricity_goals names_lthy Rs ctrAs ctrBs;
                     in
                       Goal.prove_sorry lthy [] [] (Logic.mk_conjunction_balanced goals)
-                        (fn {context = ctxt, prems = _} => mk_ctr_transfer_tac rel_intro_thms)
+                        (K (mk_ctr_transfer_tac rel_intro_thms))
                       |> Conjunction.elim_balanced (length goals)
                       |> Proof_Context.export names_lthy lthy
                       |> map Thm.close_derivation
@@ -1596,7 +1559,7 @@ fun define_co_datatypes prepare_constraint prepare_typ prepare_term fp construct
                           val thm =
                             Goal.prove_sorry lthy [] (flat premss) goal
                               (fn {context = ctxt, prems} =>
-                                mk_set_cases_tac ctxt (certify ctxt ta) prems exhaust set_thms)
+                                 mk_set_cases_tac ctxt (certify ctxt ta) prems exhaust set_thms)
                             |> singleton (Proof_Context.export names_lthy lthy)
                             |> Thm.close_derivation
                             |> rotate_prems ~1;
@@ -1680,9 +1643,9 @@ fun define_co_datatypes prepare_constraint prepare_typ prepare_term fp construct
                       else
                         Goal.prove_sorry lthy [] [] (Logic.mk_conjunction_balanced goals)
                           (fn {context = ctxt, prems = _} =>
-                            mk_rel_sel_tac ctxt (certify ctxt ta) (certify ctxt tb) exhaust
-                              (flat disc_thmss) (flat sel_thmss) rel_inject_thms distincts
-                              rel_distinct_thms)
+                             mk_rel_sel_tac ctxt (certify ctxt ta) (certify ctxt tb) exhaust
+                               (flat disc_thmss) (flat sel_thmss) rel_inject_thms distincts
+                               rel_distinct_thms)
                         |> Conjunction.elim_balanced (length goals)
                         |> Proof_Context.export names_lthy lthy
                         |> map Thm.close_derivation
@@ -1718,9 +1681,9 @@ fun define_co_datatypes prepare_constraint prepare_typ prepare_term fp construct
                       val thm =
                         Goal.prove_sorry lthy [] [] goal
                           (fn {context = ctxt, prems = _} =>
-                            mk_rel_cases_tac ctxt (certify ctxt ta) (certify ctxt tb) exhaust
-                              injects rel_inject_thms distincts rel_distinct_thms
-                              (map rel_eq_of_bnf live_nesting_bnfs))
+                             mk_rel_cases_tac ctxt (certify ctxt ta) (certify ctxt tb) exhaust
+                               injects rel_inject_thms distincts rel_distinct_thms
+                               (map rel_eq_of_bnf live_nesting_bnfs))
                         |> singleton (Proof_Context.export names_lthy lthy)
                         |> Thm.close_derivation;
 
@@ -1751,8 +1714,8 @@ fun define_co_datatypes prepare_constraint prepare_typ prepare_term fp construct
                       else
                         Goal.prove_sorry lthy [] [] (Logic.mk_conjunction_balanced goals)
                           (fn {context = ctxt, prems = _} =>
-                            mk_map_disc_iff_tac ctxt (certify ctxt ta) exhaust (flat disc_thmss)
-                              map_thms)
+                             mk_map_disc_iff_tac ctxt (certify ctxt ta) exhaust (flat disc_thmss)
+                               map_thms)
                         |> Conjunction.elim_balanced (length goals)
                         |> Proof_Context.export names_lthy lthy
                         |> map Thm.close_derivation
@@ -1778,6 +1741,7 @@ fun define_co_datatypes prepare_constraint prepare_typ prepare_term fp construct
                           if is_refl_bool prem then concl
                           else Logic.mk_implies (HOLogic.mk_Trueprop prem, concl)
                         end;
+
                       val goals = map mk_goal discAs_selAss;
                     in
                       if null goals then
@@ -1785,8 +1749,8 @@ fun define_co_datatypes prepare_constraint prepare_typ prepare_term fp construct
                       else
                         Goal.prove_sorry lthy [] [] (Logic.mk_conjunction_balanced goals)
                           (fn {context = ctxt, prems = _} =>
-                            mk_map_sel_tac ctxt (certify ctxt ta) exhaust (flat disc_thmss)
-                              map_thms (flat sel_thmss))
+                             mk_map_sel_tac ctxt (certify ctxt ta) exhaust (flat disc_thmss)
+                               map_thms (flat sel_thmss))
                         |> Conjunction.elim_balanced (length goals)
                         |> Proof_Context.export names_lthy lthy
                         |> map Thm.close_derivation
@@ -1878,7 +1842,6 @@ fun define_co_datatypes prepare_constraint prepare_typ prepare_term fp construct
                  (rel_selN, rel_sel_thms, K []),
                  (setN, set_thms, K (code_nitpicksimp_attrs @ simp_attrs)),
                  (set_casesN, set_cases_thms, nth set_cases_attrss),
-                 (set_emptyN, set_empty_thms, K []),
                  (set_introsN, set_intros_thms, K []),
                  (set_selN, set_sel_thms, K [])]
                 |> massage_simple_notes fp_b_name;
